Fixing spacing with skills

--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ main {
         background-repeat: no-repeat;
         height: 150px;
         max-width: 150px;
-        margin: 10px auto; }
+        margin: 10px auto 0; }
       main .skills .third-row #java {
         background-image: url("../img/java-icon.png"); }
       main .skills .third-row #python {
@@ -134,7 +134,11 @@ main {
         background-image: url("../img/sql.png"); }
     @media screen and (max-width: 776px) {
       main .skills {
-        display: none; } }
+        width: 100%; }
+      main .skills .second-row #react {
+        margin: 0 auto; }
+      main .skills .third-row #java {
+        margin: 0 auto; }}
   main .projects {
     text-align: center;
     padding-top: 40px; }
